# space_engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.ninja  flake.nix  game  main.c  sb.c
assets/: CMakeLists.txt
assets/shaders/: CMakeLists.txt  Heatmap.glsl  Material.glsl  RayPayload.glsl  Vertex.glsl  basic.frag  triangle.vert
client/: CMakeLists.txt  box.c  box.h  game.c  game.h  main.c
modules/core/: CMakeLists.txt
modules/core/include/core/: defines.h  system.h  systems.h
modules/game/: CMakeLists.txt  game.c  game.h  main.c
modules/math/: CMakeLists.txt
modules/math/include/math/: mat4.h  vec2.h  vec3.h  vec4.h
modules/platform/: CMakeLists.txt
modules/platform/include/platform/: platform.h
modules/platform/src/: platform_linux.c
modules/render_system/: CMakeLists.txt
modules/render_system/include/render_system/: buffer.h  pipeline.h  render.h  types.h
modules/render_system/src/: buffer.c  commandbuffer.c  device.c  image.h  instance.c  pipeline.c  pipeline.h  render.c  renderpass.c  swapchain.c  types.h
shaders/: basic.vert  model.frag  model.vert  path.frag  path.vert  triangle.vert
src/: CMakeLists.txt  game.c  game.h  main.c
src/assets/: file.c  file.h  material.h  model.c  model.h  scene.c  scene.h  texture.c  texture.h  texture_image.c  texture_image.h  uniform_buffer.c  uniform_buffer.h  vertex.h
src/assets/parsers/: gltf_parser.c  gltf_parser.h  json_parser.c  json_parser.h  obj_parser.c  obj_parser.h
src/client/: box.c  game.c  main.c
src/containers/: darray.c  darray.h  hashtable.c  hashtable.h
src/core/: CMakeLists.txt  assert.h  darray.c  darray.h  defines.h  logging.c  logging.h  main.c  result.h
src/core/public/core/: darray.h  defines.h
src/ecs/: component_store.c  component_store.h  entity.h  query.c  query.h  system.h  world.c  world.h
src/game/: game.c  game.h  main.c
src/math/: CMakeLists.txt  mat4.h  vec3.c  vec3.h  vec4.h
src/math/math/: mat4.h  vec3.h  vec4.h
src/platform/: CMakeLists.txt  platform.h  platform_linux.c  platform_win32.c
src/platform/private/: platform_linux.c  platform_win32.c
src/render_system/: CMakeLists.txt  commandbuffer.c  device.c  device.h  image.c  instance.c  instance.h  pipeline.c  pipeline.h  render.c  render.h  renderpass.c  renderpass.h  swapchain.c  swapchain.h  types.h
src/render_system/private/: commandbuffer.h  image.c  instance.c  swapchain.h
src/renderer/: acceleration_structure.c  acceleration_structure.h  application.c  application.h  bottom_level_acceleration_structure.c  bottom_level_acceleration_structure.h  bottom_level_geometry.c  bottom_level_geometry.h  buffer.c  buffer.h  camera.c  camera.h  command_buffers.c  command_buffers.h  command_pool.c  command_pool.h  commandbuffer.c  commandbuffer.h  debug_utils_messenger.c  debug_utils_messenger.h  depth_buffer.c  depth_buffer.h  descriptor_set_layout.c  descriptor_set_layout.h  device.c  device.h  device_memory.c  device_memory.h  fence.c  fence.h  framebuffer.c  framebuffer.h  graphics_pipeline.c  graphics_pipeline.h  image.c  image.h  image_view.c  image_view.h  input.c  input.h  (+34 more)
src/test_component/: component.h  system.c  system.h
test/: CMakeLists.txt  test_component.c  test_darray.c  test_entity.c  test_json.c  test_system.c
